--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://game-cdn.legendsoflearning.com/assets/lol.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
+		UnityLoader.compatibilityCheck = function (e, t, r) { t(); };
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/Build.json");
     </script>
   </head>
