--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Legends of Learning | DragonEVO</title>
+    <title>Legends of Learning | Duality Math Game</title>
     <link rel="stylesheet" href="https://game-cdn.legendsoflearning.com/assets/lol.css" />
     <script src="https://game-cdn.legendsoflearning.com/assets/lol.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-		UnityLoader.compatibilityCheck = function (e, t, r) { t(); };
       var gameInstance = UnityLoader.instantiate("gameContainer", "Build/Build.json");
     </script>
   </head>
